--- a/test_table.html
+++ b/test_table.html
@@ -137,7 +137,7 @@
     var d = new Date();
     
     var myCal =                                       new Calendar(d,
-                                                            false,false,
+                                                            false,true,
                                                             { unique_id: "t2",
                                                               title:"title_style",
                                                               table: "table_class cal_table zoomContainer",
