--- a/test_table.html
+++ b/test_table.html
@@ -8,7 +8,7 @@
 		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>-->
                 <script type="text/javascript" src="jquery-1.11.0.min.js"></script>  
 		
-		<script type="text/javascript" src="jquery.zoomooz.js"></script>
+		<script type="text/javascript" src="jquery.zoomooz.min.js"></script>
                 <script type = "text/javascript" src = "GoodCalendar.js"></script>
 <style>
 
